# kconfig-xt-test

./: CMakeLists.txt  README.md  configurator.kcfg  configurator.kcfgc  configurator.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
